# TsVitch

./: .env  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  README.md  TsVitch.code-workspace  build4Mac.sh  build4Switch.sh  crowdin.yml  downloads.json  generateAssets.sh  history.json  send2Switch.sh  test_mode_change.md  uwp.lua  xmake.lua
.github/: FUNDING.yml
.github/workflows/: build.yaml  update-downloads-badge.yml
.kiro/specs/android-support/: .config.kiro  design.md  requirements.md  tasks.md
android-project/app/: build.gradle  multidex-config.txt
android-project/app/jni/: .gitignore  CMakeLists.txt  SDL
android-project/app/jni/openssl/: OpenSSLConfig.cmake
android-project/app/jni/openssl/include/openssl/: configuration.h
android-project/app/libs/: README.md
android-project/app/libs/arm64-v8a/: .gitkeep
android-project/app/libs/armeabi-v7a/: .gitkeep
android-project/app/src/main/: AndroidManifest.xml
android-project/app/src/main/java/com/giovannimirulla/tsvitch/: TsVitchActivity.java
android-project/app/src/main/res/values/: colors.xml  strings.xml  styles.xml
android-project/gradle/wrapper/: gradle-wrapper.properties
cmake/: extra.cmake  macos.cmake
resources/i18n/en-US/: hints.json  tsvitch.json
resources/i18n/it/: hints.json  tsvitch.json
resources/i18n/pt-BR/: hints.json  tsvitch.json
resources/i18n/sv-SE/: hints.json
resources/xml/activity/: main.xml  setting_activity.xml  settings_activity.xml  video_activity.xml
resources/xml/fragment/: home_downloads.xml  home_favorites.xml  home_history.xml  home_live.xml  home_series.xml  home_tab.xml  home_vod.xml  settings_about.xml
resources/xml/views/: download_item_cell.xml  group_channel_dynamic.xml  user_info_dynamic.xml  user_info_dynamic_all.xml  video_card_live.xml  video_view.xml  video_view_android.xml
scripts/: .gitignore  README.md  build_android.sh  build_mac.sh  build_mpv_0.41.0.sh  build_openssl_android.sh  build_switch.sh  build_switch_deko3d.sh  generate-assets.lua  generate_downloads_badge.py  i18n.sh  macos_dylib_include.sh  update_gamecontrollerdb.sh  verify_deko3d_build.sh
scripts/deb/switchroot-bionic/: build.sh  control
scripts/linux/: com.giovannimirulla.tsvitch.appdata.xml  com.giovannimirulla.tsvitch.desktop
scripts/mac/: Info.plist  dmg.icns  readme.txt
scripts/switch-forwarder/: CMakeLists.txt  Makefile  README.md  pack.sh  tsvitch.json
scripts/switch-forwarder/source/: main.c
scripts/switch/mpv/: PKGBUILD  deko3d.patch
scripts/tsvitch.app/Contents/: Info.plist
scripts/tsvitch.app/Contents/Resources/: AppIcon.icns
tsvitch/: app_win32.rc.in
tsvitch.app/Contents/: Info.plist
tsvitch/include/activity/: live_player_activity.hpp  main_activity.hpp  setting_activity.hpp  settings_activity.hpp
tsvitch/include/api/: README.MD  tsvitch.h
tsvitch/include/api/tsvitch/result/: home_live_result.h
tsvitch/include/api/tsvitch/util/: http.hpp
tsvitch/include/config/: m3u8_config.h  server_config.h
tsvitch/include/core/: ChannelManager.hpp  DownloadManager.hpp  DownloadProgressManager.hpp  FavoriteManager.hpp  HistoryManager.hpp
tsvitch/include/fragment/: README.MD  home_downloads.hpp  home_favorites.hpp  home_history.hpp  home_live.hpp  home_series.hpp  home_vod.hpp  player_setting.hpp
tsvitch/include/presenter/: README.MD  home_live.hpp  home_series.hpp  home_vod.hpp
tsvitch/include/utils/: activity_helper.hpp  config_helper.hpp  event_helper.hpp  image_helper.hpp  playback_position_manager.hpp  stream_helper.hpp  xtream_helper.hpp
tsvitch/include/view/: contributors_view.hpp  download_item_cell.hpp  mpv_core.hpp  recycling_grid.hpp  selector_cell.hpp  sponsors_view.hpp  video_card.hpp  video_progress_slider.hpp  video_view.hpp
tsvitch/source/: android_ssl_init.cpp  main.cpp  resource.manifest
tsvitch/source/activity/: live_player_activity.cpp  main_activity.cpp  setting_activity.cpp  settings_activity.cpp
tsvitch/source/api/: analytics.cpp  tsvitch.cpp  video_detail_api.cpp
tsvitch/source/api/util/: http.cpp
tsvitch/source/core/: ChannelManager.cpp  DownloadManager.cpp  DownloadProgressManager.cpp  FavoriteManager.cpp  HistoryManager.cpp
tsvitch/source/fragment/: home_downloads.cpp  home_favorites.cpp  home_history.cpp  home_live.cpp  home_series.cpp  home_tab.cpp  home_vod.cpp  latest_update.cpp
tsvitch/source/presenter/: home_live.cpp  home_series.cpp  home_vod.cpp
tsvitch/source/utils/: activity_helper.cpp  config_helper.cpp  image_helper.cpp  register_helper.cpp  switch_helper.cpp  version_helper.cpp  xtream_helper.cpp
tsvitch/source/view/: auto_tab_frame.cpp  contributors_view.cpp  download_item_cell.cpp  gallery_view.cpp  mpv_core.cpp  recycling_grid.cpp  sponsors_view.cpp  svg_image.cpp  text_box.cpp  video_card.cpp  video_profile.cpp  video_progress_slider.cpp  video_view.cpp
winrt/: AppxManifest.xml.in
